# fhe-oracle-oss

./: .gitignore  CITATION.cff  COMMERCIAL.md  Dockerfile  NOTICE  README.md  pyproject.toml
benchmarks/: README.md  ablation_heuristics.py  benchmark_random_vs_cmaes.py  broader_benchmarks.py  broader_benchmarks_mlp.py  c2_n10_extension.py  cascade_taylor_to_cheb.py  cheb15_cross_circuit.py  cheb15_tight_domain.py  chebyshev_polynomials.py  component_logging_runs.py  coverage_certificate_verify.py  external_sweep.py  highdim_d512_extension.py  highdim_sweep.py  hybrid_warmstart.py  item17_lattigo_correlation.py  library_comparison.py  logistic_regression.py  mnist_mock.py  n20_lesion_audit.py  n20_seed_expansion.py  neural_layer.py  patent_logistic_regression.py  polynomial_eval.py  preactivation_d128_validation.py  preactivation_realckks_d784.py  preactivation_realckks_d784_only.py  restart_sweep.py  sigmoid_defect_benchmark.py  simd_packing_feasibility.py  small_budget_pro_vs_core.py  taylor_ckks_ablation.py  tenseal_ablation.py  tenseal_circuit2_validation.py  tenseal_circuits.py  tenseal_validation.py  union_verdict_sweep.py  v030_validation.py  v031_regression.py  (+3 more)
examples/: github_action.yml  quickstart.py
fhe_oracle/: __init__.py  adaptive.py  autoconfig.py  cascade.py  core.py  diagnostics.py  diversity.py  empirical.py  fitness.py  guarantees.py  hybrid.py  multi_output.py  preactivation.py  registry.py  report.py  seeds.py  subspace.py
scripts/: verify_release.py
tests/: test_adapters.py  test_adaptive.py  test_autoconfig.py  test_broader_benchmarks.py  test_broader_benchmarks_mlp.py  (+20 more)
(+118 files in other folders)
